# AutomatedVideoGenerator

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  some_tips.txt  usage.md
src/automated_video_generator/: __init__.py  automated_video_generator.py  automated_video_generator_method.py  cli.py  config.py
src/automated_video_generator/assets/topics_video/imagens/imagens_processadas/: a_boneca_annabelle_quase_nao_aparece_the_conjuring_4f832501-968d-4c99-a096-9468815f5e4a_processed.json  a_trilha_sonora_intensifica_o_medo_joseph_bichara_0a6fc8db-a42b-4027-ab10-0e1410b9525f_processed.json  cenas_assustadoras_improvisadas_93c7183c-21f6-4523-bca0-40a76c168ee2_processed.json  ed_e_lorraine_warren_participaram_do_filme_eddie_2ee0a759-8be1-44b1-a8eb-29b603f70d70_processed.json  inspirado_em_eventos_reais_perron_d60ac8d1-f9a6-4c4c-b984-67ad9216c212_processed.json
src/automated_video_generator/data/layers_video/: roteiro.txt
src/automated_video_generator/data/topics_video/: add_img_path_img_interv.json  dados_video_corrigido.json  imagens_em_intervalos_topicos.json  intervalos_entre_topicos.json  rot2.txt  roteiro.txt  topicos.json  transcription.json  transcription_words.json  urls.txt  video_com_frases.json  video_final_com_buscas.json
src/automated_video_generator/gui/: file_loader_screen.py  home_screen.py  main_window.py  progress_window.py  template_selection_screen.py
src/automated_video_generator/service/: validate_files.py
src/automated_video_generator/service/layers_video/: __init__.py  adicionar_camadas.py  adicionar_clips.py  adicionar_topicos.py  cortes_audio.py  criar_audio.py  criar_video.py  criar_video_ffmpeg.py  criar_video_shorts.py  get_frase_imagem_intervalo.py  get_sentido_frase_imagens.py  graphical_user_interface.py  imagens_em_intervalos_topicos.py  main.py  pegar_camadas.py  pegar_imagens.py  pegar_intervalos.py  pegar_topicos.py  processamento_de_imagem.py  processamento_de_imagem_shorts.py  transcricao_audio.py  tryyy.py  tryyyyyyyyyyyy.py
src/automated_video_generator/service/topics_video/: __init__.py  adicionar_camadas.py  cortes_audio.py  criar_audio.py  criar_video_ffmpeg.py  criar_video_shorts.py  get_frase_imagem_intervalo.py  get_sentido_frase_imagens.py  imagens_em_intervalos_topicos.py  legendar_video.py  main.py  pegar_camadas.py  pegar_imagens.py  pegar_intervalos.py  pegar_topicos.py  processamento_de_imagem.py  processamento_de_imagem_shorts.py  processar_imagem_v1.py  transcricao_audio.py  tryyy.py
src/automated_video_generator/utils/: clear_directories.py
src/automated_video_generator/utils/layers_video/: download_images_from_links_file.ps1  duckduckgo.ps1
src/automated_video_generator/utils/topics_video/: download_images_from_links_file.ps1  duckduckgo.ps1
src/automated_video_generator/workers/: video_worker.py
tests/: __init__.py  test_automated_video_generator.py
