[project]
name = "automated-video-generator"
version = "0.1.0"
description = "Project that generate videos automatically"
readme = "README.md"
authors = [
  {name = "Harison S", email = "souzaharison2@gmail.com"}
]
maintainers = [
  {name = "Harison S", email = "souzaharison2@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
    "pyside6",
    "edge_tts",
    "faster_whisper",
    "rapidfuzz",
    "thefuzz",
    "typer",
    "deep_translator",
    "spacy",
    "opencv-python",
    "pillow",
    "pydub"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/harisongsouza/automated_video_generator/issues"
changelog = "https://github.com/harisongsouza/automated_video_generator/blob/master/changelog.md"
homepage = "https://github.com/harisongsouza/automated_video_generator"

[project.scripts]
automated_video_generator = "automated_video_generator.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true

[tool.setuptools.package-data]
"*" = ["*.xml", "*.txt", "*.json", "*.ps1"]
